src/EBNF.txt
prog → {{ classOrImplOrFunc }}
classOrImplOrFunc → classDecl | implDef | funcDef
classDecl → class id [[ isa id {{ , id }} ]] { {{ visibility memberDecl }} } ;
implDef → implement id { {{funcDef}} }
funcDef → funcHead funcBody
visibility → public | private
memberDecl → funcDecl | attributeDecl
funcDecl → funcHead ;
funcHead → func id ( fParams ) => returnType | constructor ( fParams )
funcBody → { {{varDeclOrStmt}} }
VarDeclOrStmt → localVarDecl | statement
attributeDecl → attribute varDecl
localVarDecl → local varDecl
varDecl → id : type {{arraySize}} ;
statement → assignStat ; | if ( relExpr ) then statBlock else statBlock ;
| while ( relExpr ) statBlock ; | read ( variable ) ; | write ( expr ) ;
| return ( expr ) ; | functionCall ;
assignStat → variable assignOp expr
statBlock → { {{statement}} } | statement | ϵ
expr → arithExpr | relExpr
relExpr → arithExpr relOp arithExpr
arithExpr → arithExpr addOp term | term
sign → + | –
term → term multOp factor | factor
factor → variable | functionCall | intLit | floatLit | ( arithExpr ) | not factor
| sign factor
variable → {{idnest}} id {{indice}}
functionCall → {{idnest}} id ( aParams )
idnest → idOrSelf {{indice}}. | idOrSelf ( aParams ) .
idOrSelf → id | self
indice → [ arithExpr ]
arraySize → [ intLit ] | [ ]
type → integer | float | id
returnType → type | void
fParams → id : type {{arraySize}} {{fParamsTail}} | ϵ
aParams → expr {{aParamsTail}} | ϵ
fParamsTail → , id : type {{arraySize}}
aParamsTail → , expr
assignOp → :=
relOp → == | <> | < | > | <= | >=
addOp → + | – | or
multOp → * | / | and
